ACABEI ESSA PORARA LIXO MERDA NÃO QUERO FVER ESSA MERDA DE TCCC NUMCA MAIS NA MINHA VIDA TCHAU FINALMENTE AME SÓ APRESENTEAR ESAS MERDA NEA FRESNTE DA GLR FLW TCHAU VIVA LIBERDADE ENFIM SOU FELIZ LETS BORA ESTATISTICA USP UHUL AMEM ASSIM ESPERO ESTOU LOCUO PAERDI AA SINIDADE FAZER DNOA ESA MERDA LKAJSDF LÇAKSDJFL.KASDJ FKOLÇASJD FOIPAWEJ OKIFJAWEIKLOFJ

--- a/TCC/Views/GroupViewPage.xaml
+++ b/TCC/Views/GroupViewPage.xaml
@@ -37,7 +37,10 @@
 
                         <CollectionView x:Name="EtecCollectionView"
                                         ItemsSource="{Binding EtecUsers}"
-                                        BackgroundColor="Transparent">
+                                        BackgroundColor="Transparent"
+                                        SelectionMode="Single"
+                                        SelectionChanged="OnUserSelected">
+
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
                                     <Grid Padding="10,5"
@@ -85,8 +88,10 @@
                                Margin="0,0,0,10" />
 
                         <CollectionView x:Name="FatecCollectionView"
-                                        ItemsSource="{Binding FatecUsers}"
-                                        BackgroundColor="Transparent">
+                                        ItemsSource="{Binding EtecUsers}"
+                                        BackgroundColor="Transparent"
+                                        SelectionMode="Single"
+                                        SelectionChanged="OnUserSelected">
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
                                     <Grid Padding="10,5"
@@ -134,8 +139,10 @@
                                Margin="0,0,0,10" />
 
                         <CollectionView x:Name="UnespCollectionView"
-                                        ItemsSource="{Binding UnespUsers}"
-                                        BackgroundColor="Transparent">
+                                        ItemsSource="{Binding EtecUsers}"
+                                        BackgroundColor="Transparent"
+                                        SelectionMode="Single"
+                                        SelectionChanged="OnUserSelected">
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
                                     <Grid Padding="10,5"
